# th-canonical

./: .gitignore  CHANGELOG.md  LICENSE  README.md  comp.nix  flake.nix  th-canonical.cabal
.github/workflows/: get-tested.yml
src/Data/Ordered/: Set.hs
src/Language/Haskell/TH/: Canonical.hs
test/: Tests.hs
